--- a/Lenguaje_de_marcas/mangak/mangas/berserk/cap11.html
+++ b/Lenguaje_de_marcas/mangak/mangas/berserk/cap11.html
@@ -82,26 +82,53 @@
             <a class="arribaPag" href="#arriba"><i class="fa-solid fa-angle-up"></i></a>
         </section>
 
-        <img class="pagina" id="arriba" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/11/01.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/11/02.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/11/03.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/11/04.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/11/05.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/11/06.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/11/07.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/11/08.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/11/09.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/11/10.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/11/11.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/11/12.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/11/13.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/11/14.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/11/15.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/11/16.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/11/17.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/11/18.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/11/19.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/11/20.jpg" alt="">
+        <img class="pagina" id="arriba" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/4223/30UdxO.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/1783/tqDOZL.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/2170/iflEPC.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/5779/q10dNI.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/9794/1kiCpx.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/2936/D03WiA.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/5198/Hyw1h9.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/34/QdFrM4.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/1927/y6EnDH.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/206/AfVzpI.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/1899/ExzwEO.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/2/Dpzj4H.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/1530/Kx7ZPn.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/5656/0mv0Pw.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/8186/LPRSpo.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/9669/Dq2npj.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/5976/D925mw.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/3664/kNfUNt.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/2156/B4LbRx.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/4156/aX5QwN.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/305/C9Gje8.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/3498/KMAztw.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/8949/4bxqiS.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/7954/WLRgg9.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/5640/8oFQXZ.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/8835/RugDOh.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/9480/0OPVOu.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/8564/pGyyOA.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/9342/j3hpHc.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/9339/kSDuim.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/3948/painmt.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/15/L5rxYh.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/9806/eZsMD4.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/3104/jA23zS.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/7167/eNaJIS.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/8669/Y2hM6o.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/3606/GRU0FF.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/4603/1a3Wsh.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/232/euH2ww.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/8996/X1yzO8.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/3756/p96pmy.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/4780/mvTucG.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/7655/HYzqeP.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/2933/u5UXW5.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/8910/IIqJsQ.jpg">
+
+
     </main>
 
     <!-- Footer pag sim -->
