--- a/Lenguaje_de_marcas/mangak/mangas/berserk/cap14.html
+++ b/Lenguaje_de_marcas/mangak/mangas/berserk/cap14.html
@@ -82,25 +82,49 @@
             <a class="arribaPag" href="#arriba"><i class="fa-solid fa-angle-up"></i></a>
         </section>
 
-        <img class="pagina" id="arriba" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/14/01.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/14/02.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/14/03.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/14/04.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/14/05.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/14/06.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/14/07.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/14/08.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/14/09.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/14/10.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/14/11.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/14/12.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/14/13.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/14/14.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/14/15.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/14/16.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/14/17.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/14/18.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/14/19.jpg" alt="">
+        <img class="pagina" id="arriba"src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/9951/UCMCAI.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/1879/m8yIPK.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/9797/rA1Qwy.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/749/IBHZea.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/3139/VfM9Sv.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/4668/WGLuLM.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/8208/gexUKH.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/4420/ieFp79.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/4353/GPo2VP.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/126/Jf78xf.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/111/1PQLb7.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/2739/BJcmq6.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/2435/rt9T2g.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/4339/VO65UC.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/1138/9XbVRg.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/4489/1ZkaeW.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/24/g4fZWH.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/2366/G6zoZQ.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/6857/lHeJ8s.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/8070/iDlKPT.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/8715/BMhVBi.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/883/4Adc06.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/2520/3N4USa.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/5351/ygpJDS.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/84/obbBug.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/3045/aAcA3x.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/1253/UdJlKz.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/8739/svOzd1.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/7140/WVzO4P.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/962/IKt20G.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/1451/sCruFR.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/2491/Eye0dS.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/9374/TQXpH7.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/2662/KFvrj8.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/6751/K9vhjT.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/3949/OnLEQW.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/3476/u4Vq4z.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/5597/wsXx1K.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/2663/yONH4C.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/64/0WmJZ1.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/4399/DLW5sH.jpg">
+
+
     </main>
 
     <!-- Footer pag sim -->
