--- a/Lenguaje_de_marcas/mangak/mangas/berserk/cap7.html
+++ b/Lenguaje_de_marcas/mangak/mangas/berserk/cap7.html
@@ -82,27 +82,68 @@
             <a class="arribaPag" href="#arriba"><i class="fa-solid fa-angle-up"></i></a>
         </section>
 
-        <img class="pagina" id="arriba" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/01.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/02.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/03.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/04.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/05.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/06.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/07.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/08.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/09.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/10.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/11.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/12.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/13.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/14.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/15.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/16.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/17.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/18.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/19.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/20.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/21.jpg" alt="">
+    <img class="pagina" id="arriba" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/4372/Kwx81M.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/1315/8HOZIc.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/5381/VlVAfC.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/3764/3FakLq.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/9630/hZRzem.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/3908/FPnZYo.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/8595/i1Rurj.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/9788/vmvV7O.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/4440/Youdhy.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/1982/Q4zjS6.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/5488/txwa1D.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/2156/DnIkEr.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/2030/hRQN9v.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/8303/A1Min3.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/4686/ogxCce.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/3006/MtSFF5.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/5469/QPITrt.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/9715/aWfg6T.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/3249/h8fu79.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/725/by0Eeh.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/8520/88DfH3.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/141/9YBIN4.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/6770/AzjbET.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/7538/V36jYD.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/442/nD2Osb.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/7402/UoTesn.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/3255/6aMDNB.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/5853/ep1ZCH.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/2205/XkNmxL.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/7324/GANhsF.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/4969/bg909p.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/2479/2P3Wx8.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/9261/r6m4PN.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/1613/tMVSBw.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/1152/npXmE3.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/5752/DBb0WY.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/6324/vBHtiG.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/6359/IW9Qqi.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/4185/3WVBN1.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/5473/23z4C7.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/5026/GXp3fK.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/4950/n7UHCw.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/7315/DsRWvC.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/5527/tJlpbc.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/2030/YYjU15.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/2387/LM2KhI.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/7136/m5wSdl.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/153/MUCg1L.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/8426/WKT6Tt.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/8083/iaQuNu.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/3564/lFpRzo.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/8817/qJeYrl.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/2650/5flqiJ.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/3749/S7JVPW.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/3454/H3SZ26.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/249/XqAHbe.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/286/qwzpRz.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/4995/T2k7Ij.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/2601/G6t9gj.jpg">
+    <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/2839/YgRbi9.jpg">
+
+
     </main>
 
     <!-- Footer pag sim -->
