--- a/Lenguaje_de_marcas/mangak/mangas/berserk/cap12.html
+++ b/Lenguaje_de_marcas/mangak/mangas/berserk/cap12.html
@@ -82,29 +82,52 @@
             <a class="arribaPag" href="#arriba"><i class="fa-solid fa-angle-up"></i></a>
         </section>
 
-        <img class="pagina" id="arriba" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/01.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/02.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/03.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/04.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/05.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/06.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/07.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/08.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/09.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/10.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/11.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/12.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/13.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/14.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/15.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/16.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/17.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/18.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/19.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/20.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/21.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/22.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/23.jpg" alt="">
+        <img class="pagina" id="arriba" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/3191/KikH1m.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/2648/VhNkTy.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/3391/lSwUkP.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/8458/7Uv5bz.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/7008/XCFmka.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/9930/7VpulB.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/3482/HOX2Zv.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/2636/9RCVcH.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/5496/lAxcby.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/5630/ZC88lV.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/8042/TwBl7A.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/146/ndRBBT.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/1446/RoY3WX.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/4113/dbAHya.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/3782/oKmLgl.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/5287/DI3TR8.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/6672/1x9FDE.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/1056/GHjh9m.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/821/ZmE9Wr.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/5303/MrV7xr.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/9687/gj9y72.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/2556/Iut0Iu.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/8125/E8oh29.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/9374/1yB0UH.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/2411/Q02QE9.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/4598/n2sok0.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/8999/tw2Tpi.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/4961/6IwIXd.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/7527/boUhpR.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/734/cRB3Xm.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/369/Qgf9oO.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/6099/1Gmdq2.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/2069/oXHHju.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/3655/0ikZXk.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/4859/WQsT09.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/5458/1n6dn9.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/3370/tdC2nb.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/6761/A36EoB.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/6799/frfu6X.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/3894/iDQGiP.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/2751/zenj69.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/1153/wkURoj.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/4817/3hKh1a.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/1668/XC3AKF.jpg">
+
+
     </main>
 
     <!-- Footer pag sim -->
