--- a/Lenguaje_de_marcas/mangak/mangas/berserk/cap20.html
+++ b/Lenguaje_de_marcas/mangak/mangas/berserk/cap20.html
@@ -82,26 +82,28 @@
             <a class="arribaPag" href="#arriba"><i class="fa-solid fa-angle-up"></i></a>
         </section>
 
-        <img class="pagina" id="arriba" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/01.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/02.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/03.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/04.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/05.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/06.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/07.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/08.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/09.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/10.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/11.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/12.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/13.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/14.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/15.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/16.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/17.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/18.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/19.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/20.jpg" alt="">
+        <img class="pagina" id="arriba" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/6355/n6kvLc.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/221/CjG3Dj.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/3292/SNPg3j.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/9043/OwDtod.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/4371/8lzhNr.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/1093/MJb7oO.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/2199/mRLxH2.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/8056/LwctuV.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/9366/Ad696B.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/596/deYfLE.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/4904/zW2d18.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/6386/NDLaSv.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/1542/mTJvk3.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/6629/J8RYOO.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/2096/tZIE5U.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/702/HJCvw1.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/4916/0JVa3O.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/6743/gc59nN.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/4589/4CuPyC.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/7158/sEyP4j.jpg">
+
+
     </main>
 
     <!-- Footer pag sim -->
