--- a/Lenguaje_de_marcas/mangak/mangas/berserk/cap4.html
+++ b/Lenguaje_de_marcas/mangak/mangas/berserk/cap4.html
@@ -18,7 +18,8 @@
         <!-- Nombre de la obra -->
         <h3 class="neontext"><a href="../../index.html">MangaK</a></h3>
 
-        <!-- 3 rayas del laterañ display -->
+        <!-- 3 rayas del latera
+ display -->
         <label id="linesUp" for="check" class="checkbtn">
             <i class="fas fa-bars"></i>
         </label>
@@ -48,7 +49,8 @@
             <input type="checkbox" id="check">
 
             <ul>
-                <!-- 3 rayas del laterañ display -->
+                <!-- 3 rayas del latera
+ display -->
                 <label for="check" class="checkbtn">
                     <i class="fas fa-bars"></i>
                 </label>
@@ -82,26 +84,117 @@
             <a class="arribaPag" href="#arriba"><i class="fa-solid fa-angle-up"></i></a>
         </section>
 
-        <img class="pagina" id="arriba" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/01.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/02.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/03.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/04.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/05.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/06.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/07.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/08.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/09.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/10.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/11.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/12.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/13.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/14.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/15.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/16.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/17.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/18.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/19.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/20.jpg" alt="">
+        <img class="pagina" id="arriba" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/3963/j612PC.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/4294/x3WlF0.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/4194/xCZjuX.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/8950/cpuI42.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/5210/kJ9TzJ.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/271/ipPwpK.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/4634/l8fqhf.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/9846/f0yQLV.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/1366/EXCSBx.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/4669/pfPqbC.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/7663/Rs4qzT.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/6786/lgGVBR.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/5541/WKWWJ1.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/4369/EWOs6J.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/9823/fOlnhr.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/8259/3oGQmq.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/9450/l81tR9.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/6512/jP3hyW.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/4565/IENurV.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/4553/Lf4V8d.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/2786/QSuUKR.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/7761/MmF04D.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/8097/U4qODw.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/1723/uPDqtY.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/6240/z6KKDG.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/2093/eGALRz.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/2964/WcDPIv.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/5497/9ZTVI2.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/3866/uBNvBZ.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/2873/TAI4GV.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/5852/UVc1bN.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/7972/eChRoG.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/1153/v3WTv3.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/4940/nJRBBt.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/760/OJxRda.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/4074/4Ty4iF.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/1743/2Vl84O.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/9899/NQyxN5.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/8629/k98YGK.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/1662/qdNtRV.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/4329/UAqDDq.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/9369/K3Ghrf.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/9427/xxCLmY.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/8749/5aD5yA.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/3967/aiF8rO.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/2938/hNIplP.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/8202/dUbeRr.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/3306/d9Ym60.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/5579/jxHe3T.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/7884/krzIdz.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/93/Hy04dp.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/4623/S5qeJ3.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/6378/1OsQhf.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/2858/UYAYHW.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/9629/pmNUvv.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/2466/AH3gYl.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/3906/3HVW1P.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/2894/cGJS3z.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/4052/Ch6qBs.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/1200/RwGY8W.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/6368/pAowuq.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/5774/OVNO8s.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/678/6fplvN.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/8059/Qnr2Oz.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/5949/FOGqmM.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/9245/tpxQyJ.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/1715/f0K3GQ.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/4928/vdUOJS.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/3813/q2w8WH.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/7737/5bPDrf.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/5707/YCe958.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/8933/baHLYM.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/4214/UR9pj5.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/2516/v24VL4.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/6838/qwYDss.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/4076/mcMIBR.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/3553/gI3Ov3.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/1640/VkPVrg.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/8517/CAFaxJ.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/7799/cRRwX4.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/2846/XvOgFK.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/2254/cQtbOr.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/4388/ktTBSt.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/7638/iPlygU.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/6363/EiyAzX.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/7075/b3uJAh.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/3048/W53zMN.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/77/YLDLXo.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/9329/9mBvr8.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/6462/0LgsSy.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/1838/mDKMfp.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/7809/1FzrhU.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/8689/ovsr9U.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/2628/QcgRsg.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/4029/NcbXoC.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/9193/BnAv8c.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/3476/syGM8K.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/8632/CDba29.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/9201/EZ4yXl.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/5532/EExJ6E.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/6488/FtG8PW.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/5649/QfRVwA.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/7703/tUwMfV.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/4635/mCeJvn.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/98/rkWIhz.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/514/YTlN5K.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/2518/ysYPZJ.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/7165/ACEB4G.jpg">
+        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/330/gt735k.jpg">
+        
+
     </main>
 
     <!-- Footer pag sim -->
