--- a/Lenguaje_de_marcas/mangak/mangas/iron-ladies/cap17.html
+++ b/Lenguaje_de_marcas/mangak/mangas/iron-ladies/cap17.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../../styles/fontawesome-free-6.3.0-web/css/all.css">
     <!-- icons-source -->
     <!-- https://fontawesome.com/icons/tag?s=solid&f=classic -->
-    <title>Capitulo 19</title>
+    <title>Capitulo 17</title>
 </head>
 
 <body>
@@ -76,35 +76,39 @@
     <main>
 
         <section class="control">
-            <a class="adelante" href="cap18.html"><i class="fa-solid fa-backward"></i></a>
+            <a class="adelante" href="cap16.html"><i class="fa-solid fa-backward"></i></a>
             <a class="menu" href="front.html"><i class="fa-solid fa-house"></i></a>
-            <a class="atras" href="cap20.html"><i class="fa-solid fa-forward"></i></a>
+            <a class="atras" href="cap18.html"><i class="fa-solid fa-forward"></i></a>
             <a class="arribaPag" href="#arriba"><i class="fa-solid fa-angle-up"></i></a>
         </section>
 
-        <img class="pagina" id="arriba" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/310/OpKvdd.jpg">
-        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/3457/1zjfcM.jpg">
-        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/6633/8gRPE4.jpg">
-        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/4861/m2D5Xg.jpg">
-        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/5712/du1Byn.jpg">
-        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/9408/jt1el3.jpg">
-        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/971/lmvhlA.jpg">
-        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/8307/d8ZiMR.jpg">
-        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/3095/I4KSrc.jpg">
-        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/6577/dcRrUG.jpg">
-        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/9220/aZxd6X.jpg">
-        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/5605/ZXqK0c.jpg">
-        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/8900/4155o2.jpg">
-        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/2991/NTLPWd.jpg">
-        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/6431/lfHW1d.jpg">
-        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/5350/Hq49Q9.jpg">
-        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/9387/h65vSY.jpg">
-        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/6232/6ItD1d.jpg">
-        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/2984/VjzRnt.jpg">
-        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/7381/2GRQpC.jpg">
-        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/6168/oCAFKq.jpg">
-
-
+        <img class="pagina" id="arriba" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/01.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/02.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/03.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/04.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/05.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/06.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/07.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/08.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/09.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/10.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/11.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/12.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/13.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/14.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/15.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/16.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/17.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/18.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/19.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/20.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/21.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/22.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/23.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/24.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/25.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/26.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/27.jpg" alt="">
     </main>
 
     <!-- Footer pag sim -->
