--- a/Lenguaje_de_marcas/mangak/mangas/plantilla/cap19.html
+++ b/Lenguaje_de_marcas/mangak/mangas/plantilla/cap19.html
@@ -82,29 +82,26 @@
             <a class="arribaPag" href="#arriba"><i class="fa-solid fa-angle-up"></i></a>
         </section>
 
-        <img class="pagina" id="arriba" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/310/OpKvdd.jpg">
-        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/3457/1zjfcM.jpg">
-        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/6633/8gRPE4.jpg">
-        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/4861/m2D5Xg.jpg">
-        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/5712/du1Byn.jpg">
-        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/9408/jt1el3.jpg">
-        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/971/lmvhlA.jpg">
-        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/8307/d8ZiMR.jpg">
-        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/3095/I4KSrc.jpg">
-        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/6577/dcRrUG.jpg">
-        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/9220/aZxd6X.jpg">
-        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/5605/ZXqK0c.jpg">
-        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/8900/4155o2.jpg">
-        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/2991/NTLPWd.jpg">
-        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/6431/lfHW1d.jpg">
-        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/5350/Hq49Q9.jpg">
-        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/9387/h65vSY.jpg">
-        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img924/6232/6ItD1d.jpg">
-        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img922/2984/VjzRnt.jpg">
-        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/7381/2GRQpC.jpg">
-        <img class="pagina" src="https://cdn.statically.io/img/imagizer.imageshack.com/a/img923/6168/oCAFKq.jpg">
-
-
+        <img class="pagina" id="arriba" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/01.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/02.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/03.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/04.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/05.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/06.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/07.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/08.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/09.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/10.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/11.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/12.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/13.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/14.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/15.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/16.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/17.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/18.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/19.jpg" alt="">
+        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/20.jpg" alt="">
     </main>
 
     <!-- Footer pag sim -->
